# zooperator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: MissionSystem.h  animal.h  bear.h  elephant.h  exhibit.h  game.h  lion.h  mission.h  monkey.h  penguin.h  player.h  rabbit.h  tortoise.h  zoo.h
src/: MissionSystem.cpp  animal.cpp  bear.cpp  elephant.cpp  exhibit.cpp  game.cpp  lion.cpp  main.cpp  monkey.cpp  penguin.cpp  player.cpp  rabbit.cpp  tortoise.cpp  zoo.cpp
test/: CMakeLists.txt  test_animal.cpp  test_bear.cpp  test_elephant.cpp  test_exhibit.cpp  test_integration.cpp  test_lion.cpp  test_mission_system.cpp  test_monkey.cpp  test_penguin.cpp  test_player.cpp  test_rabbit.cpp  test_tortoise.cpp  test_zoo.cpp
